@@ -75,7 +75,7 @@ public class RendererUtilitiesTests extends TestCase {
      * Some checks for the findLiveItemsLowerBound() method when the dataset is
      * unordered.
      */
-    public void testFindLiveItemsLowerBoundUnordered() {
+    public void testFindLiveItemsLowerBound_Unordered() {
         DefaultXYDataset d = new DefaultXYDataset();
 
         // check a series with no items
@@ -84,42 +84,42 @@ public class RendererUtilitiesTests extends TestCase {
                 11.0));
 
         // check a series with one item
-        d.addSeries("S2", new double[][] {{1.0}, {2.0}});
+        d.addSeries("S2", new double[][] {{0.0}, {9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 1, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 1, 2.0,
                 3.3));
 
         // check a series with two items
-        d.addSeries("S3", new double[][] {{1.0, 2.0}, {2.0, 2.0}});
+        d.addSeries("S3", new double[][] {{0.0, 1.0}, {9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 0.0,
                 1.1));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 1.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 1.0,
                 2.2));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 2.0,
                 3.3));
         assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 3.0,
                 4.4));
 
         // check a series with three items
-        d.addSeries("S4", new double[][] {{1.0, 2.0, 1.5}, {2.0, 2.0, 2.0}});
+        d.addSeries("S4", new double[][] {{1.0, 2.0, 1.5}, {9.9, 9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 1.0,
                 2.2));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 3, 2.0,
                 3.3));
         assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 3, 3.0,
                 4.4));
 
         // check a series with four items
-        d.addSeries("S5", new double[][] {{1.0, 2.0, 1.5, 1.8}, {2.0, 2.0,
-                2.0, 2.0}});
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 1.5, 1.8}, {9.9, 9.9,
+                9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 1.0,
                 2.2));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 4, 2.0,
                 3.3));
         assertEquals(3, RendererUtilities.findLiveItemsLowerBound(d, 4, 3.0,
                 4.4));
@@ -131,7 +131,7 @@ public class RendererUtilitiesTests extends TestCase {
      * Some checks for the findLiveItemsLowerBound() method when the dataset is
      * ASCENDING.
      */
-    public void testFindLiveItemsLowerBoundAscending() {
+    public void testFindLiveItemsLowerBound_Ascending() {
         DefaultXYDataset d = new DefaultXYDataset() {
             public DomainOrder getDomainOrder() {
                 // we're doing this for testing only, and make sure that we
@@ -145,14 +145,14 @@ public class RendererUtilitiesTests extends TestCase {
                 11.1));
 
         // check a series with one item
-        d.addSeries("S2", new double[][] {{1.0}, {2.0}});
+        d.addSeries("S2", new double[][] {{1.0}, {9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 1, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 1, 2.0,
                 2.2));
 
         // check a series with two items
-        d.addSeries("S3", new double[][] {{1.0, 2.0}, {2.0, 2.0}});
+        d.addSeries("S3", new double[][] {{1.0, 2.0}, {9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 1.0,
@@ -163,7 +163,7 @@ public class RendererUtilitiesTests extends TestCase {
                 4.4));
 
         // check a series with three items
-        d.addSeries("S4", new double[][] {{1.0, 2.0, 3.0}, {2.0, 2.0, 2.0}});
+        d.addSeries("S4", new double[][] {{1.0, 2.0, 3.0}, {9.9, 9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 1.0,
@@ -174,8 +174,8 @@ public class RendererUtilitiesTests extends TestCase {
                 4.4));
 
         // check a series with four items
-        d.addSeries("S5", new double[][] {{1.0, 2.0, 3.0, 4.0}, {2.0, 2.0,
-                2.0, 2.0}});
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 3.0, 4.0}, {9.9, 9.9,
+                9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 1.0,
@@ -188,8 +188,8 @@ public class RendererUtilitiesTests extends TestCase {
                 5.5));
 
         // check a series with repeating items
-        d.addSeries("S5", new double[][] {{1.0, 2.0, 2.0, 2.0, 3.0}, {2.0, 2.0,
-                2.0, 2.0, 2.0}});
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 2.0, 2.0, 3.0}, {9.9, 9.9,
+                9.9, 9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.0,
                 4.0));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 1.0,
@@ -205,11 +205,11 @@ public class RendererUtilitiesTests extends TestCase {
      * Some checks for the findLiveItemsLowerBound() method when the dataset is
      * DESCENDING.
      */
-    public void testFindLiveItemsLowerBoundDescending() {
+    public void testFindLiveItemsLowerBound_Descending() {
         DefaultXYDataset d = new DefaultXYDataset() {
             public DomainOrder getDomainOrder() {
                 // we're doing this for testing only, and make sure that we
-                // only add data in ascending order by x-value
+                // only add data in descending order by x-value
                 return DomainOrder.DESCENDING;
             }
         };
@@ -219,14 +219,14 @@ public class RendererUtilitiesTests extends TestCase {
                 11.0));
 
         // check a series with one item
-        d.addSeries("S2", new double[][] {{1.0}, {2.0}});
+        d.addSeries("S2", new double[][] {{1.0}, {9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 1, 0.0,
                 1.0));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 1, 1.1,
                 2.0));
 
         // check a series with two items
-        d.addSeries("S3", new double[][] {{2.0, 1.0}, {2.0, 2.0}});
+        d.addSeries("S3", new double[][] {{2.0, 1.0}, {9.9, 9.9}});
         assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 0.1,
                 0.5));
         assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 0.1,
@@ -239,7 +239,7 @@ public class RendererUtilitiesTests extends TestCase {
                 4.0));
 
         // check a series with three items
-        d.addSeries("S4", new double[][] {{3.0, 2.0, 1.0}, {2.0, 2.0, 2.0}});
+        d.addSeries("S4", new double[][] {{3.0, 2.0, 1.0}, {9.9, 9.9, 9.9}});
         assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 3, 0.0,
                 1.0));
         assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 3, 1.0,
@@ -250,8 +250,8 @@ public class RendererUtilitiesTests extends TestCase {
                 4.0));
 
         // check a series with four items
-        d.addSeries("S5", new double[][] {{4.0, 3.0, 2.0, 1.0}, {2.0, 2.0,
-                2.0, 2.0}});
+        d.addSeries("S5", new double[][] {{4.0, 3.0, 2.0, 1.0}, {9.9, 9.9,
+                9.9, 9.9}});
         assertEquals(3, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.1,
                 0.5));
         assertEquals(3, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.1,
@@ -266,8 +266,8 @@ public class RendererUtilitiesTests extends TestCase {
                 5.0));
 
         // check a series with repeating items
-        d.addSeries("S6", new double[][] {{3.0, 2.0, 2.0, 2.0, 1.0}, {2.0, 2.0,
-                2.0, 2.0, 2.0}});
+        d.addSeries("S6", new double[][] {{3.0, 2.0, 2.0, 2.0, 1.0}, {9.9, 9.9,
+                9.9, 9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 5, 0.0,
                 3.0));
         assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 5, 0.0,
@@ -282,7 +282,7 @@ public class RendererUtilitiesTests extends TestCase {
      * Some checks for the findLiveItemsUpperBound() method when the dataset is
      * unordered.
      */
-    public void testFindLiveItemsUpperBoundUnordered() {
+    public void testFindLiveItemsUpperBound_Unordered() {
         DefaultXYDataset d = new DefaultXYDataset();
 
         // check a series with no items
@@ -291,46 +291,46 @@ public class RendererUtilitiesTests extends TestCase {
                 11.0));
 
         // check a series with one item
-        d.addSeries("S2", new double[][] {{1.0}, {2.0}});
+        d.addSeries("S2", new double[][] {{1.0}, {9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 1, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 1, 2.0,
                 3.3));
 
         // check a series with two items
-        d.addSeries("S3", new double[][] {{1.0, 2.0}, {2.0, 2.0}});
-        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 0.0,
+        d.addSeries("S3", new double[][] {{1.0, 2.0}, {9.9, 9.9}});
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 2, 0.0,
                 1.1));
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 1.0,
                 2.2));
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 2.0,
                 3.3));
-        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 3.0,
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 2, 3.0,
                 4.4));
 
         // check a series with three items
-        d.addSeries("S4", new double[][] {{1.0, 2.0, 1.5}, {2.0, 2.0, 2.0}});
-        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 3, 0.0,
+        d.addSeries("S4", new double[][] {{1.0, 2.0, 1.5}, {9.9, 9.9, 9.9}});
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 3, 0.0,
                 1.1));
         assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 3, 1.0,
                 2.2));
-        assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 3, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 3, 2.0,
                 3.3));
-        assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 3, 3.0,
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 3, 3.0,
                 4.4));
 
         // check a series with four items
-        d.addSeries("S5", new double[][] {{1.0, 2.0, 1.5, 1.8}, {2.0, 2.0,
-                2.0, 2.0}});
-        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 1.5, 1.8}, {9.9, 9.9,
+                9.9, 9.9}});
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
                 1.1));
         assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 1.0,
                 2.2));
-        assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 4, 2.0,
                 3.3));
-        assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 3.0,
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 3.0,
                 4.4));
-        assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 4.0,
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 4.0,
                 5.5));
     }
 
@@ -338,7 +338,7 @@ public class RendererUtilitiesTests extends TestCase {
      * Some checks for the findLiveItemsUpperBound() method when the dataset is
      * ASCENDING.
      */
-    public void testFindLiveItemsUpperBoundAscending() {
+    public void testFindLiveItemsUpperBound_Ascending() {
         DefaultXYDataset d = new DefaultXYDataset() {
             public DomainOrder getDomainOrder() {
                 // we're doing this for testing only, and make sure that we
@@ -352,14 +352,14 @@ public class RendererUtilitiesTests extends TestCase {
                 11.1));
 
         // check a series with one item
-        d.addSeries("S2", new double[][] {{1.0}, {2.0}});
+        d.addSeries("S2", new double[][] {{1.0}, {9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 1, 0.0,
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 1, 2.0,
                 2.2));
 
         // check a series with two items
-        d.addSeries("S3", new double[][] {{1.0, 2.0}, {2.0, 2.0}});
+        d.addSeries("S3", new double[][] {{1.0, 2.0}, {9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 2, 0.0,
                 1.0));
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 1.0,
@@ -370,7 +370,7 @@ public class RendererUtilitiesTests extends TestCase {
                 4.4));
 
         // check a series with three items
-        d.addSeries("S4", new double[][] {{1.0, 2.0, 3.0}, {2.0, 2.0, 2.0}});
+        d.addSeries("S4", new double[][] {{1.0, 2.0, 3.0}, {9.9, 9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 3, 0.0,
                 1.1));
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 3, 1.0,
@@ -381,8 +381,8 @@ public class RendererUtilitiesTests extends TestCase {
                 4.4));
 
         // check a series with four items
-        d.addSeries("S5", new double[][] {{1.0, 2.0, 3.0, 4.0}, {2.0, 2.0,
-                2.0, 2.0}});
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 3.0, 4.0}, {9.9, 9.9,
+                9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
                 1.1));
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 4, 1.0,
@@ -395,8 +395,8 @@ public class RendererUtilitiesTests extends TestCase {
                 5.5));
 
         // check a series with repeating items
-        d.addSeries("S5", new double[][] {{1.0, 2.0, 2.0, 2.0, 3.0}, {2.0, 2.0,
-                2.0, 2.0, 2.0}});
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 2.0, 2.0, 3.0}, {9.9, 9.9,
+                9.9, 9.9, 9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
                 1.0));
         assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
@@ -412,11 +412,11 @@ public class RendererUtilitiesTests extends TestCase {
      * Some checks for the findLiveItemsUpperBound() method when the dataset is
      * DESCENDING.
      */
-    public void testFindLiveItemsUpperBoundDescending() {
+    public void testFindLiveItemsUpperBound_Descending() {
         DefaultXYDataset d = new DefaultXYDataset() {
             public DomainOrder getDomainOrder() {
                 // we're doing this for testing only, and make sure that we
-                // only add data in ascending order by x-value
+                // only add data in descending order by x-value
                 return DomainOrder.DESCENDING;
             }
         };
@@ -426,14 +426,14 @@ public class RendererUtilitiesTests extends TestCase {
                 11.0));
 
         // check a series with one item
-        d.addSeries("S2", new double[][] {{1.0}, {2.0}});
+        d.addSeries("S2", new double[][] {{1.0}, {9.9}});
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 1, 0.0,
                 1.0));
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 1, 1.1,
                 2.0));
 
         // check a series with two items
-        d.addSeries("S3", new double[][] {{2.0, 1.0}, {2.0, 2.0}});
+        d.addSeries("S3", new double[][] {{2.0, 1.0}, {9.9, 9.9}});
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 0.1,
                 0.5));
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 0.1,
@@ -446,7 +446,7 @@ public class RendererUtilitiesTests extends TestCase {
                 4.0));
 
         // check a series with three items
-        d.addSeries("S4", new double[][] {{3.0, 2.0, 1.0}, {2.0, 2.0, 2.0}});
+        d.addSeries("S4", new double[][] {{3.0, 2.0, 1.0}, {9.9, 9.9, 9.9}});
         assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 3, 0.0,
                 1.0));
         assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 3, 1.0,
@@ -457,8 +457,8 @@ public class RendererUtilitiesTests extends TestCase {
                 4.0));
 
         // check a series with four items
-        d.addSeries("S5", new double[][] {{4.0, 3.0, 2.0, 1.0}, {2.0, 2.0,
-                2.0, 2.0}});
+        d.addSeries("S5", new double[][] {{4.0, 3.0, 2.0, 1.0}, {9.9, 9.9,
+                9.9, 9.9}});
         assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.1,
                 0.5));
         assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.1,
@@ -473,8 +473,8 @@ public class RendererUtilitiesTests extends TestCase {
                 5.0));
 
         // check a series with repeating items
-        d.addSeries("S6", new double[][] {{3.0, 2.0, 2.0, 2.0, 1.0}, {2.0, 2.0,
-                2.0, 2.0, 2.0}});
+        d.addSeries("S6", new double[][] {{3.0, 2.0, 2.0, 2.0, 1.0}, {9.9, 9.9,
+                9.9, 9.9, 9.9}});
         assertEquals(4, RendererUtilities.findLiveItemsUpperBound(d, 5, 0.0,
                 5.0));
         assertEquals(4, RendererUtilities.findLiveItemsUpperBound(d, 5, 1.0,
