@@ -1,5 +1,12 @@
 2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/renderer/RendererUtilities.java
+    (findLiveItemsLowerBound): Fixed results for unsorted dataset,
+    (findLiveItemsUpperBound): Likewise,
+    (findLiveItems): Check case where upper index is less than lower.
+
+2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/plot/XYPlot.java
     (domainPannable): Change default to false,
     (rangePannable): Likewise,
